# KyleKalendar

./: .gitignore  CMakeLists.txt  Chalkboard1  Chalkboard2  Chalkboard3  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  purplebackground  resources.qrc  test.cpp
KyleKalendarQt/: main1.cpp
src/: Event.h  ToDo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
